# android-process-guard

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sumauto/guard/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sumauto/guard/: App.java  AppService.kt  MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/sumauto/guard/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
guard/: build.gradle
guard/src/androidTest/java/com/sumauto/guard/: ExampleInstrumentedTest.kt
guard/src/main/: AndroidManifest.xml
guard/src/main/cpp/: CMakeLists.txt  CoutLog.cpp  CoutLog.h  guard.cpp
guard/src/main/java/com/sumauto/guard/: SumautoGuard.kt
guard/src/main/java/com/sumauto/guard/deamon/: AppProcessRunner.kt  Assist1.kt  Assist2.kt  DaemonGuard.kt  DaemonService.kt  FileLocker.kt  GuardInit.kt  IBinderManager.kt  MyInstrumentation.kt  ResidentService.kt  StartInfo.kt
guard/src/main/java/com/sumauto/guard/signal/: SignalGuard.kt
guard/src/main/java/com/sumauto/guard/utils/: NativeBridge.kt  ReflectHelper.java  ServiceHelper.kt  SystemUtils.kt  XLog.kt
